--- a/Rock Paper Scissors/rock_paper_scissors.css
+++ b/Rock Paper Scissors/rock_paper_scissors.css
@@ -38,7 +38,7 @@ p {
     font-size: 28px;
 }
 
-.css-reset-button {
+.css-button {
     font-size: 16px;
     padding: 10px 15px;
     cursor: pointer;
